# teams-cli

./: Cargo.toml  LICENSE  README.md
skill/teams-cli/references/: install.md
src/: main.rs
src/api/: csa.rs  messages.rs  mod.rs  presence.rs
src/auth/: webview.rs
src/cli/: chat.rs  message.rs  mod.rs  presence.rs
