[package]
name = "teams-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for Microsoft Teams using Skype/CSA APIs"
license = "MIT"
authors = ["Max Rahimi"]

[[bin]]
name = "teams"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Auth
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
# keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Webview (auth flow)
tao = "0.31"
wry = "0.47"

# macOS native menu (clipboard support in webview)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Output
comfy-table = "7"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Text processing
regex = "1"

# Misc
dirs = "6"
url = "2"
urlencoding = "2"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
